# planar-reflection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/: camera.h  material.h  obj_model.h  point_light.h  shader_program.h  utils.h
libs/imgui/: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  main.cpp  material.cpp  obj_model.cpp  point_light.cpp  shader_program.cpp  utils.cpp
